# hotspot

./: Cargo.toml  LICENCE  README.md  log4rs.yaml
src/: main.rs
src/logging/: mod.rs
src/routes/: admin.rs  index.rs  login.rs  mod.rs  vulnerabilities.rs
src/templates/: admin_dashboard.html  admin_login.html
