[package]
name = "hotspot"
autors = ["Ante Perišić <perisic.ante@gmail.com>"]
version = "0.1.0"
edition = "2024"
licence = "MIT"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.9.0"
chrono = "0.4.40"
env_logger = "0.11.6"
futures = "0.3.31"
log = "0.4.26"
log4rs = "1.3.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
